# qiboopt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_addition_behavior.py
.github/: codecov.yml
.github/workflows/: publish.yml  rules.yml
doc/source/: conf.py  index.rst
doc/source/api-reference/: combinatorial.rst  combinatorial_classes.rst  dqi.rst  index.rst  opt_class.rst
doc/source/getting-started/: index.rst  installation.rst  quickstart.rst
src/qibo_comb_optimisation/combinatorial_classes/: combinatorial_classes.py
src/qibo_comb_optimisation/optimisation_class/: optimisation_class.py
src/qiboopt/: __init__.py
src/qiboopt/combinatorial/: combinatorial copy.py  combinatorial.py
src/qiboopt/combinatorial_classes/: combinatorial_classes.py
src/qiboopt/dqi/: __init__.py  circuit.py  dicke.py  max_xorsat.py  solver.py  weights.py
src/qiboopt/integrations/: qiboml_adapter.py
src/qiboopt/opt_class/: opt_class.py
src/utils/: utils.py
tests/: conftest.py  test_combinatorial.py  test_combinatorial_classes.py  test_dqi_circuit.py  test_dqi_decoders.py  test_dqi_dicke.py  test_dqi_max_xorsat.py  test_dqi_solver.py  test_dqi_weights.py  test_models_variational.py  test_opt_class.py  test_optimisation_class.py  test_package_init.py  test_qiboml_integration.py  test_tutorial_max_cut_notebook.py
tests/regressions/: tsp_layer4_imag.out  tsp_layer4_real.out
tutorial/: Max-Cut with QAOA class.ipynb  Max-Cut-qiboml.ipynb  Max-Cut.ipynb  Portfolio Optimization (MA-QAOA).ipynb  TSP with QAOA class.ipynb  TSP.ipynb  basicQUBOclass.ipynb
(+4 files in other folders)
